--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Ecommerce</string>
+    <string name="app_name">E-commerce solution</string>
     <string name="facebook_app_id">515721959080205</string>
 </resources>
